new get.kobman.io

--- a/scripts/tmpl/get.kobman.io.tmpl
+++ b/scripts/tmpl/get.kobman.io.tmpl
@@ -4,11 +4,13 @@
 #Install: stable
 
 # Global variables
-KOBMAN_VERSION="@KOB_VERSION@"
-KOB_ARCHIVE_DOWNLOAD_REPO="@KOB_ARCHIVE_DOWNLOAD_REPO@"
 KOBMAN_PLATFORM=$(uname)
-KOBMAN_SERVICE="https://raw.githubusercontent.com"
+export KOBMAN_SERVICE="https://raw.githubusercontent.com"
+
 KOBMAN_NAMESPACE="@KOB_NAMESPACE@"
+KOBMAN_VERSION="@KOB_VERSION@"
+
+# KOBMAN_DIST_BRANCH=${KOBMAN_DIST_BRANCH:-REL-${KOBMAN_VERSION}}
 
 
 
@@ -22,16 +24,17 @@ kobman_src_folder="${KOBMAN_DIR}/src"
 kobman_tmp_folder="${KOBMAN_DIR}/tmp"
 kobman_stage_folder="${kobman_tmp_folder}/stage"
 kobman_zip_file="${kobman_tmp_folder}/kobman-${KOBMAN_VERSION}.zip"
-kobman_env_folder="${KOBMAN_DIR}/env"
+kobman_env_folder="${KOBMAN_DIR}/envs"
+kobman_stage_folder="${kobman_tmp_folder}/stage"
 kobman_etc_folder="${KOBMAN_DIR}/etc"
 kobman_var_folder="${KOBMAN_DIR}/var"
-kobman_archives_folder="${KOBMAN_DIR}/archives"
-kobman_candidates_folder="${KOBMAN_DIR}/candidates"
 kobman_config_file="${kobman_etc_folder}/config"
 kobman_bash_profile="${HOME}/.bash_profile"
 kobman_profile="${HOME}/.profile"
 kobman_bashrc="${HOME}/.bashrc"
 kobman_zshrc="${HOME}/.zshrc"
+
+
 
 kobman_init_snippet=$( cat << EOF
 #THIS MUST BE AT THE END OF THE FILE FOR KOBMAN TO WORK!!!
@@ -59,10 +62,11 @@ case "$(uname)" in
         freebsd=true
 esac
 
-sudo apt install figlet -y
 
-figlet KOB-Setup ...
-figlet $KOBMAN_NAMESPACE repo 
+
+echo "KOBman "
+echo "Setting up "
+
 
 # Sanity checks
 
@@ -166,14 +170,12 @@ mkdir -p "$kobman_stage_folder"
 mkdir -p "$kobman_env_folder"
 mkdir -p "$kobman_etc_folder"
 mkdir -p "$kobman_var_folder"
-mkdir -p "$kobman_archives_folder"
-mkdir -p "$kobman_candidates_folder"
 
-echo "Getting available candidates..."
-KOBMAN_CANDIDATES_CSV=$(curl -s "${KOBMAN_SERVICE}/$KOBMAN_NAMESPACE/$KOB_ARCHIVE_DOWNLOAD_REPO/master/all")
-echo "$KOBMAN_CANDIDATES_CSV" > "${KOBMAN_DIR}/var/candidates"
+
 
 echo "Prime the config file..."
+echo "config selfupdate/debug_mode = true"
+
 touch "$kobman_config_file"
 echo "kobman_auto_answer=false" >> "$kobman_config_file"
 echo "kobman_auto_selfupdate=false" >> "$kobman_config_file"
@@ -181,12 +183,14 @@ echo "kobman_insecure_ssl=false" >> "$kobman_config_file"
 echo "kobman_curl_connect_timeout=7" >> "$kobman_config_file"
 echo "kobman_curl_max_time=10" >> "$kobman_config_file"
 echo "kobman_beta_channel=false" >> "$kobman_config_file"
-echo "kobman_debug_mode=false" >> "$kobman_config_file"
+echo "kobman_debug_mode=true" >> "$kobman_config_file"
 echo "kobman_colour_enable=true" >> "$kobman_config_file"
 
 echo "Download script archive..."
 
-curl --location --progress-bar "${KOBMAN_SERVICE}/$KOBMAN_NAMESPACE/$KOB_ARCHIVE_DOWNLOAD_REPO/dist/kobman-latest.zip" > "$kobman_zip_file"
+# once move to kobman namespace needs to update kobman-latest.zip 
+curl -sL --location --progress-bar "${KOBMAN_SERVICE}/${KOBMAN_NAMESPACE}/KOBman/dist/dist/kobman-latest.zip" > "$kobman_zip_file"
+
 
 ARCHIVE_OK=$(unzip -qt "$kobman_zip_file" | grep 'No errors detected in compressed data')
 if [[ -z "$ARCHIVE_OK" ]]; then
@@ -194,7 +198,7 @@ if [[ -z "$ARCHIVE_OK" ]]; then
 	echo ""
 	echo "If problems persist, please ask for help on our Github:"
 	echo "* easy sign up: https://github.com/"
-	echo "https://github.com/$KOBMAN_NAMESPACE/$KOB_ARCHIVE_DOWLOAD_REPO/issues"
+	echo "https://github.com/${KOBMAN_NAMESPACE}/KOBman/issues"
 	rm -rf "$KOBMAN_DIR"
 	exit 2
 fi
@@ -210,13 +214,21 @@ unzip -qo "$kobman_zip_file" -d "$kobman_stage_folder"
 
 echo "Install scripts..."
 
+
+curl -sL "https://raw.githubusercontent.com/${KOBMAN_NAMESPACE}/KOBman/master/dist/environments" > tmp.txt
+sed -i 's/,/ /g' tmp.txt 
+environments=$(<tmp.txt)
+for i in $environments;
+do
+	mv "$kobman_stage_folder"/kobman-$i.sh "$kobman_env_folder"
+done 
+rm tmp.txt
 mv "${kobman_stage_folder}/kobman-init.sh" "$kobman_bin_folder"
-mv "$kobman_stage_folder"/kobman-kob* "$kobman_env_folder"
-mv "$kobman_stage_folder"/kobman-tob* "$kobman_env_folder"
 mv "$kobman_stage_folder"/kobman-* "$kobman_src_folder"
+mv "$kobman_stage_folder"/list.txt "$kobman_var_folder"
 
 echo "Set version to $KOBMAN_VERSION ..."
-echo "$KOBMAN_VERSION" > "${KOBMAN_DIR}/var/version"
+echo "$KOBMAN_VERSION" > "${KOBMAN_DIR}/var/version.txt"
 
 
 if [[ $darwin == true ]]; then
@@ -242,10 +254,6 @@ if [[ -z $(grep 'kobman-init.sh' "$kobman_zshrc") ]]; then
     echo "Updated existing ${kobman_zshrc}"
 fi
 
-sudo chmod a+rwx .
-sudo chmod u+xr /home/blockchain/.kobman/candidates
-sudo chmod go+x /
-sudo chmod go+x /root
 echo -e "\n\n\nAll done!\n\n"
 
 echo "Please open a new terminal, or run the following in the existing one:"
